--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "biscolab/laravel-recaptcha": "^5.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "html2text/html2text": "^4.3",
         "laravel/framework": "^8.75",
         "laravel/jetstream": "^2.8",
         "laravel/sanctum": "^2.11",
